--- a/frontend/MonitorProcessos/package.json
+++ b/frontend/MonitorProcessos/package.json
@@ -22,7 +22,11 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.4",
     "@microsoft/signalr": "^8.0.0",
+    "angular-highcharts": "^17.0.1",
+    "chart.js": "^4.4.2",
     "express": "^4.18.2",
+    "highcharts": "^11.4.1",
+    "ng2-charts": "^6.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
