--- a/frontend/MonitorProcessos/package.json
+++ b/frontend/MonitorProcessos/package.json
@@ -28,6 +28,7 @@
     "chart.js": "^4.4.2",
     "express": "^4.18.2",
     "highcharts": "^11.4.1",
+    "highcharts-angular": "^4.0.0",
     "ng2-charts": "^6.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
